[project]
name = "cabert-slu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fire>=0.7.0",
    "h5py>=2.10.0",
    "keras>=2.15.0",
    "more-itertools>=10.5.0",
    "nltk>=3.9.1",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "scikit-learn>=1.2.2",
    "spacy>=3.7.5",
    "tensorflow>=2.2.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "transformers>=4.46.3",
]
